--- a/index.html
+++ b/index.html
@@ -196,17 +196,21 @@
           Importantly, the rectifier is related to the correlation between the paired real and simulation evaluations. In a sense, it quantifies the real-simulation gap and provides a lower bound on the advantage 
           (e.g., minimizing confidence interval width, saving hardware evaluations) we can expect from scaling simulation. If the rectifier variance is smaller than the variance in real evaluations, we can expect to save on real-world evaluations.</p>
           <br>
-          <video class="overview-video" autoplay loop muted playsinline poster="static/thumbnails/paired_evals.png">
-            <source src="static/videos/paired_evals.mp4" type="video/mp4" />
-            Your browser does not support the video tag.
-          </video>
+          <div class="col-md-12">
+            <video class="overview-video" autoplay loop muted playsinline poster="static/thumbnails/paired_evals.png">
+              <source src="static/videos/paired_evals.mp4" type="video/mp4" />
+              Your browser does not support the video tag.
+            </video>
+          </div>
       <h3 class="title is-4 has-text-centered mt-6">Additional simulation evaluations</h3>
         <p class="mb-5">Relative to the size of the paired dataset, we collect a large number of additional simulations. By running large-scale simulation tests, we can further improve the accuracy of our performance estimates.</p>
         <br>
-        <video class="overview-video" autoplay loop muted playsinline poster="static/thumbnails/additional_sim.png">
-          <source src="static/videos/additional_sim.mp4" type="video/mp4" />
-          Your browser does not support the video tag.
-        </video>
+        <div class="col-md-12">
+          <video class="overview-video" autoplay loop muted playsinline poster="static/thumbnails/additional_sim.png">
+            <source src="static/videos/additional_sim.mp4" type="video/mp4" />
+            Your browser does not support the video tag.
+          </video>
+        </div>
     </div> 
   </section>
 
@@ -248,7 +252,14 @@
             <figure style="text-align: center; margin: 20px 0;">
               <img src="static/thumbnails/diffusion_policy_savings.png" alt="Sample photo" width="1000" style="border: 2px solid #ccc; border-radius: 8px;">
             </figure>
+            <div class="container is-max-desktop content-container has-text-centered">
+              <video class="overview-video" autoplay loop muted playsinline poster="static/thumbnails/overview.png">
+                <source src="static/videos/scaling.mp4" type="video/mp4" />
+                Your browser does not support the video tag.
+              </video>
+            </div>
     </div>
+
   </section>
 
   <section class="section" id="BibTeX">
