--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
       </p>
       <br>
     </div>
-    <div class="col-md-12">
+    <div class="container is-max-desktop content-container has-text-centered">
       <video class="overview-video" width="1000" autoplay loop muted playsinline poster="static/thumbnails/overview.png">
           <source src="static/videos/fast_policy_eval.mp4" type="video/mp4" />
           Your browser does not support the video tag.
@@ -196,7 +196,7 @@
           Importantly, the rectifier is related to the correlation between the paired real and simulation evaluations. In a sense, it quantifies the real-simulation gap and provides a lower bound on the advantage 
           (e.g., minimizing confidence interval width, saving hardware evaluations) we can expect from scaling simulation. If the rectifier variance is smaller than the variance in real evaluations, we can expect to save on real-world evaluations.</p>
           <br>
-          <div class="col-md-12">
+          <div class="container is-max-desktop content-container has-text-centered">
             <video class="overview-video" autoplay loop muted playsinline poster="static/thumbnails/paired_evals.png">
               <source src="static/videos/paired_evals.mp4" type="video/mp4" />
               Your browser does not support the video tag.
@@ -205,7 +205,7 @@
       <h3 class="title is-4 has-text-centered mt-6">Additional simulation evaluations</h3>
         <p class="mb-5">Relative to the size of the paired dataset, we collect a large number of additional simulations. By running large-scale simulation tests, we can further improve the accuracy of our performance estimates.</p>
         <br>
-        <div class="col-md-12">
+        <div class="container is-max-desktop content-container has-text-centered">
           <video class="overview-video" autoplay loop muted playsinline poster="static/thumbnails/additional_sim.png">
             <source src="static/videos/additional_sim.mp4" type="video/mp4" />
             Your browser does not support the video tag.
