--- a/index.html
+++ b/index.html
@@ -260,6 +260,15 @@
             </div>
     </div>
 
+    <div class="container is-max-desktop content-container">
+      <h3 class="title is-4 has-text-centered mt-6">SureSim is robust to large real-simulation mismatch</h3>
+          <p class="mb-5"> In low correlation settings, real-world-only evaluation gives the tightest bounds on policy performance. SureSim is effective when simulation is more predictive of real-world performance than the variance in real data.
+            Yet, even under high real-simulation mismatch, SureSim returns reliable confidence intervals. Moreover, we can check for the level of mismatch before investing computational effort in scaling simulation. </p>
+            <br></div>
+            <figure style="text-align: center; margin: 20px 0;">
+              <img src="static/thumbnails/low_corr.png" alt="Sample photo" width="1000" style="border: 2px solid #ccc; border-radius: 8px;">
+            </figure>
+    </div>
   </section>
 
   <section class="section" id="BibTeX">
