--- a/index.html
+++ b/index.html
@@ -237,20 +237,19 @@
       </figure> -->
     <div class="container is-max-desktop content-container">
       <h3 class="title is-4 has-text-centered mt-6">SureSim requires fewer hardware evaluations</h3>
-          <p class="mb-5">Compared to obtaining confidence intervals with real-world only trials, SureSim leverages simulation effectively, requiring fewer hardware evaluations to achieve similar bounds.</p>
+          <p class="mb-5">Compared to obtaining confidence intervals with real-world only trials, SureSim leverages simulation effectively, requiring fewer hardware evaluations to achieve similar bounds.
+            SureSim saves 20 - 25% hardware evaluations to get similar bounds on policy performance.
+          </p>
             <br></div> 
             <figure style="text-align: center; margin: 20px 0;">
-              <img src="static/thumbnails/saving.png" alt="Sample photo" width="1000" style="border: 2px solid #ccc; border-radius: 8px;">
-              <figcaption style="font-size: 0.9em; color: #555; margin-top: 8px;">
-                SureSim saves 20 - 25% hardware evaluations to get similar bounds on policy performance.
-              </figcaption>
+              <img src="static/thumbnails/saving.png" alt="Sample photo" width="1000" style="border-radius: 8px;">
             </figure>
     <div class="container is-max-desktop content-container">
       <h3 class="title is-4 has-text-centered mt-6">SureSim illustrates the advantage of scaling simulation evaluations</h3>
           <p class="mb-5"> Instead of scaling up hardware evaluations, we can scale up simulation evaluations up to the limit of the real-simulation gap. </p>
             <br></div>
             <figure style="text-align: center; margin: 20px 0;">
-              <img src="static/thumbnails/diffusion_policy_savings.png" alt="Sample photo" width="1000" style="border: 2px solid #ccc; border-radius: 8px;">
+                <img src="static/thumbnails/diffusion_policy_savings.png" alt="Sample photo" width="800" style="border-radius: 8px;">
             </figure>
             <div class="container is-max-desktop content-container has-text-centered">
               <video class="overview-video" autoplay loop muted playsinline poster="static/thumbnails/overview.png">
