--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
             Yet, even under high real-simulation mismatch, SureSim returns reliable confidence intervals. Moreover, we can check for the level of mismatch before investing computational effort in scaling simulation. </p>
             <br></div>
             <figure style="text-align: center; margin: 20px 0;">
-              <img src="static/thumbnails/low_corr.png" alt="Sample photo" width="1000" style="border: 2px solid #ccc; border-radius: 8px;">
+              <img src="static/thumbnails/low_corr.png" alt="Sample photo" width="800" style="border-radius: 8px;">
             </figure>
     </div>
   </section>
